--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+
+    "resolveJsonModule": true,
+    "esModuleInterop": true,  
+    
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
